backend: fixed all the backend code
