# bsol-backend/src/main/java/com/uv/bsol_backend/model/CommonResponseFields.java
@@ -1,26 +1,0 @@
-package com.uv.bsol_backend.model;
-
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-import lombok.experimental.SuperBuilder;
-
-import java.util.List;
-
-@Getter
-@Setter
-@SuperBuilder
-@NoArgsConstructor
-@AllArgsConstructor
-public abstract class CommonResponseFields {
-    protected Long id;
-    protected String type;
-    protected String subType;
-    protected String primaryId;
-    protected String city;
-    protected Double latitude;
-    protected Double longitude;
-    protected List<String> images;
-    protected String status;
-}
